[package]
name = "vsi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui = "1.0.12"
native-windows-derive = "1.0.3"
color-eyre = "0.5"
winrt-notification = "0.5.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dependencies.windows]
version = "0.26.0"
features = [
    "Data_Xml_Dom",
    "UI_Notifications",
    "ApplicationModel",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging"
]

[build-dependencies]
embed-resource = "1.6"