[package]
name = "vsi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui = "1.0.12"
native-windows-derive = "1.0.3"
color-eyre = "0.5"
notify-rust = "4"
msfs = "0.1.0"
msfs_derive = "0.1.0"
msfs_sdk = "0.1.0"
lazy_static = "1.4.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
embed-resource = "1.6"
winres = "0.1.12"

[package.metadata.winres]
OriginalFilename = "vsi.exe"
